Add combobox to events new

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,3 +43,11 @@ body{
 #creators-container a{
   color: white;
 }
+#attendances-create-container{
+  width: 100%;
+  height: 10%;
+  background-color: white;
+  color:black;
+  font-weight: 800;
+  font-size:28px;
+}
