Add dashboard layouts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -51,3 +51,8 @@ body{
   font-weight: 800;
   font-size:28px;
 }
+.dashboard-container{
+  background-color: white;
+  font-size: 28px;
+  font-weight: 800;
+}
