form for invitation

--- a/app/views/shared/_users_to_invite.html.erb
+++ b/app/views/shared/_users_to_invite.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
  <h1> <%= @attendances  %></h1>
-  <%= form_for :attendance do |f| %>
+  <%= form_for(:attendance, url: event_created_path) do |f| %>
       <% get_users_name.each do |item| %>
-          <%= f.check_box :name,{}, true, false %> <%= item %>
+          <%= f.check_box ,{}, true, false %> <%= item %>
           <br />
       <% end %>
       <%= f.submit  "Invite", class: "btn btn-primary" %>
