--- a/app/views/attendances/create.html.erb
+++ b/app/views/attendances/create.html.erb
@@ -1,3 +1,12 @@
 <h1>Attendances#create</h1>
 <p>Find me in app/views/attendances/create.html.erb</p>
-<%=   %>
+
+Soy los params <%  @my.each do |key,value| %>
+    <h1><% @v= value%></h1> <br>
+  <% end %>
+  <% @v.each do |x| %>
+    <% if x != "" %>
+      <h1> <%= x %> </h1>
+    <% end %>
+  <% end %>
+
