--- a/app/views/attendances/create.html.erb
+++ b/app/views/attendances/create.html.erb
@@ -1,12 +1,10 @@
 <h1>Attendances#create</h1>
 <p>Find me in app/views/attendances/create.html.erb</p>
 
-Soy los params <%  @my.each do |key,value| %>
-    <h1><% @v= value%></h1> <br>
-  <% end %>
-  <% @v.each do |x| %>
-    <% if x != "" %>
-      <h1> <%= x %> </h1>
-    <% end %>
-  <% end %>
+Soy los params
+<%= %>
+<%  chek_users_invite.each do |mail| %>
+                <h1><%= mail %></h1> <br>
+          <% end%>
 
+<br>
