--- a/app/views/attendances/create.html.erb
+++ b/app/views/attendances/create.html.erb
@@ -2,8 +2,8 @@
 <p>Find me in app/views/attendances/create.html.erb</p>
 
 Soy los params
-<%= %>
-<%  chek_users_invite.each do |mail| %>
+<%= check_users_invite %>
+<%  check_users_invite.each do |mail| %>
                 <h1><%= mail %></h1> <br>
           <% end%>
 
