Fix Send Emails

--- a/app/views/attendances/create.html.erb
+++ b/app/views/attendances/create.html.erb
@@ -2,9 +2,11 @@
 <p>Find me in app/views/attendances/create.html.erb</p>
 
 Soy los params
-<%= check_users_invite %>
+<h1>Yo soy el usuario logueado:<%= @user.name %> , ID: <%= @user.id %></h1>
 <%  check_users_invite.each do |mail| %>
-                <h1><%= mail %></h1> <br>
+                <span><%= mail %></span> ,
           <% end%>
 
 <br>
+
+    <h1>Soy el Evento ID: <%=  check_event_invite %> </h1> <br>
