--- a/app/views/user_mailer/invitation.html.erb
+++ b/app/views/user_mailer/invitation.html.erb
@@ -1,4 +1,4 @@
-<h1>Hi <%= @user.name %>!</h1>,
+<h1>Hi <%= params[:user].name %>!</h1>,
 <p>
-You've been invited to <%= @event.title %>! Have fun!
+You've been invited to <%= Event.find(params[:eventid]).title %>! Have fun!
 </p>
