index,scopes,show,helper view

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,22 +1,1 @@
-<table>
-  <th>Image</th>
-  <th>Title</th>
-  <th>Content</th>
-  <th>Location</th>
-  <th>Start</th>
-  <th>End</th>
-
-    <% @event.each do |item| %>
-      <tr>
-        <td><%= gravatar_for @user %></td>
-        <td><%= item.title %></td>
-        <td><%= item.content %></td>
-        <td><%= item.location %></td>
-        <td><%= item.start %></td>
-        <td><%= item.end %></td>
-      </tr>
-    <% end %>
-
-</table>
-
-<% provide(:title, @event) %>
+<%= show_events %>
