--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,14 @@
 <% provide(:title, @user.name) %>
 <h1>
   <%= gravatar_for @user %>
-  <%= @user.name %><br>
-  <%= @user.email %>
+  Welcome <%= @user.name %>!<br>
+  Email: <%= @user.email %>
 </h1>
+<h1>Your Events</h1>
+<% @user.events.each do |event| %>
+  <%= event.title %><br>
+<% end %>
+<h1>Your Invitations</h1>
+<% @user.attended_event.each do |event| %>
+  <%= event.title %><br>
+<% end %>
