--- a/app/views/shared/_past_events.html.erb
+++ b/app/views/shared/_past_events.html.erb
@@ -7,7 +7,7 @@
   <th>End</th>
   <th>Invited Friends</th>
 
-  <% @event.past.all.each do |item| %>
+  <% current_user.attended_event.past.all.each do |item| %>
     <tr>
       <td><%= gravatar_for current_user %></td>
       <td><%= item.title %></td>
