--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+    <%= link_to "AGENDATOR", root_path, id: "logo" %>
     <%= user_available %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
