--- a/app/views/events/dashboard.html.erb
+++ b/app/views/events/dashboard.html.erb
@@ -1,6 +1,5 @@
 <div class="dashboard-container container">
+  <div class="tittle-text">MENU</div>
   <div class="container row"><%= link_to 'Yours Events',event_path %></div>
   <div class="container row"><%= link_to 'Invite friends',invitations_path %></div>
-  <div class="container row"><%= link_to 'Past Events','#' %></div>
-  <div class="container row"><%= link_to 'Future Events','#' %></div>
 </div>
