--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Log in") %>
 <div class="login-container">
-  <h1>Create User</h1><div class="row">
+  <h1 class="tittle-text">Create User</h1><div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user,url: signup_path) do |f| %>
         <%= render 'shared/error_messages' %>
