--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,9 +1,9 @@
 <div class="tabs-container container">
   <h1 class="tittle-text">Your Events</h1>
   <%= show_events %><br>
-  <h1>Upcoming Events</h1>
+  <h1 class="tittle-text">Upcoming Events</h1>
   <%= upcoming_events %><br>
-  <h1>Past Events</h1>
+  <h1 class="tittle-text">Past Events</h1>
   <%= past_events %>
 </div>
 
