--- a/app/views/events/friends.html.erb
+++ b/app/views/events/friends.html.erb
@@ -1,3 +1,3 @@
-<div class="attendance-form container">
+<div class="login-container attendance-form container">
   <%= render 'shared/users_to_invite' %>
 </div>
