--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,6 +5,7 @@
         <p id="logo-name"><%= "Welcome: #{user_available}" if !user_available.nil? %></p>
       </div>
       <ul class="nav navbar-nav navbar-right">
+        <li> <%= users_view %></li>
         <li> <%= logged_view %></li>
         <li><%= logged_post %></li>
         <li><%= logged_profile %></li>
